Fix image stretching without respecting aspect ratio bug

--- a/sass/components/_entry-content.scss
+++ b/sass/components/_entry-content.scss
@@ -27,6 +27,7 @@ $content-gutter: $spacing-large;
 
   img {
     max-width: 100%;
+    height: auto;
   }
 
   h2 {
